--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -51,7 +51,7 @@ h6, .h6 {
 }
 .blog-nav-item:hover,
 .blog-nav-item:focus {
-    color: #fff;
+    color: #271d1b;
     text-decoration: none;
 }
 
